add app.modules.dir property; describe next processes in commentary